kubeapp/LOCAL/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tdd-demo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tdd-demo
    spec:
      containers:
      - name: tdd-demo-container
        image: tdd-demo:latest
        imagePullPolicy: IfNotPresent # NOTE this is for local env only
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tdd-demo-svc
  labels:
    app: tdd-demo
spec:
  ports:
  - port: 8080
  selector:
    app: tdd-demo
